# ELF

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
src_cpp/elfgames/american_checkers/: CMakeLists.txt
src_cpp/elfgames/american_checkers/common/: ClientGameSelfPlay.cc  ClientGameSelfPlay.h  DispatcherCallback.h  DistriClient.h  GameBase.h  GameFeature.h  GameStats.h  ModelPair.h  Notifier.h  record.h
src_cpp/elfgames/american_checkers/game/: BoardFeature.cc  BoardFeature.h  GameBoard.cc  GameBoard.h  GameOptions.h  GameState.cc  GameState.h  GameStateExt.cc  GameStateExt.h  HashAllMoves.h  Record.h
src_cpp/elfgames/american_checkers/mcts/: AI.h  MCTSGameAI.h  MCTSGameActor.h
src_cpp/elfgames/american_checkers/pybind/: Pybind.cc  Pybind.h  pybind_module.cc
src_cpp/elfgames/american_checkers/sgf/: sgf.h
src_cpp/elfgames/american_checkers/train/: GameContext.h  client_manager.h  data_loader.h  distri_base.h
src_cpp/elfgames/russian_checkers/: CMakeLists.txt
src_cpp/elfgames/russian_checkers/common/: ClientGameSelfPlay.cc  ClientGameSelfPlay.h  DispatcherCallback.h  DistriClient.h  GameBase.h  GameFeature.h  GameStats.h  ModelPair.h  Notifier.h  record.h
src_cpp/elfgames/russian_checkers/game/: CheckersBoard.cc  CheckersBoard.h  CheckersFeature.cc  CheckersFeature.h  CheckersGameOptions.h  CheckersState.cc  CheckersState.h  CheckersStateExt.cc  CheckersStateExt.h  HashAllMoves.h  Record.h
src_cpp/elfgames/russian_checkers/mcts/: AI.h  CheckersMCTSActor.h  MCTSCheckersAI.h
src_cpp/elfgames/russian_checkers/pybind/: Pybind.cc  Pybind.h  pybind_module.cc
src_cpp/elfgames/russian_checkers/sgf/: sgf.h
src_cpp/elfgames/russian_checkers/train/: GameContext.h  client_manager.h  data_loader.h  distri_base.h
src_cpp/elfgames/ugolki/: CMakeLists.txt
src_cpp/elfgames/ugolki/common/: ClientGameSelfPlay.cc  ClientGameSelfPlay.h  DispatcherCallback.h  DistriClient.h  GameBase.h  GameFeature.h  GameStats.h  ModelPair.h  Notifier.h  record.h
src_cpp/elfgames/ugolki/game/: BoardFeature.cc  BoardFeature.h  GameBoard.cc  GameBoard.h  GameOptions.h  GameState.cc  GameState.h  GameStateExt.cc  GameStateExt.h  HashAllMoves.h  Record.h  SimpleAgent.cc  SimpleAgent.h
src_cpp/elfgames/ugolki/mcts/: AI.h  MCTSGameAI.h  MCTSGameActor.h
src_cpp/elfgames/ugolki/pybind/: Pybind.cc  Pybind.h  pybind_module.cc
(+132 files in other folders)
